Code edits to make chart more responsive to screen size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <header>
         <nav>
-            <a href="#home">HOME</a> <a href="#about">ABOUT</a> <a href="#goodsContainer">GOODS</a> <a href="#servicesContainer">SERVICES</a>
+            <a href="#home">HOME</a> <a href="#about">ABOUT</a> <a href="#goodsContainer">GOODS</a> <a
+                href="#servicesContainer">SERVICES</a>
         </nav>
     </header>
 
@@ -25,8 +26,15 @@
     </div>
 
     <div id="about">
-        <p>SOURCE: MINISTRY OF MANPOWER
-            Employment change refers to the change in the number of persons who are in employment, derived by taking the difference in the employment level at the end of the reference period compared with the end of the preceding period. A positive change refers to the additional number of persons who are in employment, while a negative change refers to the decline in number of persons in employment. Data may not add up to the total due to rounding. The industries are classified based on SSIC 2015 from 2009 onwards and SSIC 2005 from 2002 to 2008. Data for 2009 and 2010 are revised at the industry level to reflect updates in pre-approved Letter of Consent (PLOC) numbers. Data for the earlier years will be revised progressively when the data are available.</p>
+        <div>SOURCE: MINISTRY OF MANPOWER
+            Employment change refers to the change in the number of persons who are in employment, derived by taking the
+            difference in the employment level at the end of the reference period compared with the end of the preceding
+            period. A positive change refers to the additional number of persons who are in employment, while a negative
+            change refers to the decline in number of persons in employment. Data may not add up to the total due to
+            rounding. The industries are classified based on SSIC 2015 from 2009 onwards and SSIC 2005 from 2002 to
+            2008. Data for 2009 and 2010 are revised at the industry level to reflect updates in pre-approved Letter of
+            Consent (PLOC) numbers. Data for the earlier years will be revised progressively when the data are
+            available.</div>
     </div>
 
     <div id="goodsContainer">
@@ -47,7 +55,10 @@
             <h5>X-year | Y-employment units</h5>
         </div>
 
-        <div id="wholesaleothersChart" class="chart"></div>
+
+        <!-- <div id="wrapper"> -->
+            <div id="wholesaleothersChart" class="chart"></div>
+        <!-- </div> -->
         <div id="accomodationChart" class="chart"></div>
     </div>
 
