Updated Readme and Navbar icons

--- a/index.html
+++ b/index.html
@@ -4,19 +4,45 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Employment Sectors Guide</title>
 </head>
 
 <body>
-
     <header>
         <nav>
-            <a href="#home">HOME</a> <a href="#about">ABOUT</a> <a href="#goodsContainer">GOODS</a> <a
-                href="#servicesContainer">SERVICES</a>
+            <ul>
+                <li>
+                    <a href="#home">
+                        <div class="icon"><i class="fas fa-home"></i></div>
+                        <div class="name">HOME</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#about">
+                        <div class="icon"><i class="fas fa-list-alt"></i></div>
+                        <div class="name">ABOUT</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#goodsContainer">
+                        <div class="icon"><i class="fas fa-box-open"></i></div>
+                        <div class="name">GOODS</div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#servicesContainer">
+                        <div class="icon"><i class="fas fa-hard-hat"></i></div>
+                        <div class="name">SERVICES</div>
+                    </a>
+                </li>
+            </ul>
         </nav>
     </header>
 
